feat(KAN-23): align API body - difficulty_mix, bank_id, snake_case fields
AIGenerateExamRequest:
- @JsonProperty snake_case: grade_level, total_questions, bank_id,
  difficulty_mix, question_type, duration_mins
- difficulty_mix: Map<String,Integer> - phan bo cau theo tung muc kho
- bankId: Integer (singular, thay bankIds: List)
- title: optional (auto-generated tu subject + topic neu bo trong)
- helper: resolvedTitle(), hasDifficultyMix()

ExamService.aiGenerateExam():
- Mode A (difficulty_mix): voi moi (difficulty, count) -> fetch bank
  theo difficulty, AI fill gap per-difficulty level
- Mode B (single): hanh vi cu, fetch bank + AI fill gap
- fetchFromBankById(): dung bankId (singular)
- internal record: DifficultyMixResult, SingleDifficultyResult

ExamController: cap nhat Swagger doc - example JSON body chinh xac